# voting-substrate

./: Cargo.toml
node/: Cargo.toml
pallets/voting/: Cargo.toml
pallets/voting/src/: lib.rs
runtime/: Cargo.toml
